app/service.yaml
kind: Service
apiVersion: v1
metadata:
  name: spring-petclinic
  namespace: spring-petclinic
  labels:
    app: spring-petclinic
    app.kubernetes.io/component: spring-petclinic
    app.kubernetes.io/instance: spring-petclinic
    app.kubernetes.io/name: spring-petclinic
    app.kubernetes.io/part-of: spring-petclinic-app
    app.openshift.io/runtime-version: latest
spec:
  clusterIP: 172.30.166.86
  ipFamilies:
    - IPv4
  ports:
    - name: 8080-tcp
      protocol: TCP
      port: 8080
      targetPort: 8080
    - name: 8443-tcp
      protocol: TCP
      port: 8443
      targetPort: 8443
    - name: 8778-tcp
      protocol: TCP
      port: 8778
      targetPort: 8778
  internalTrafficPolicy: Cluster
  clusterIPs:
    - 172.30.166.86
  type: ClusterIP
  ipFamilyPolicy: SingleStack
  sessionAffinity: None
  selector:
    app: spring-petclinic
    deployment: spring-petclinic
