app/route.yaml
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: spring-petclinic
  namespace: spring-petclinic
  labels:
    app: spring-petclinic
    app.kubernetes.io/component: spring-petclinic
    app.kubernetes.io/instance: spring-petclinic
    app.kubernetes.io/name: spring-petclinic
    app.kubernetes.io/part-of: spring-petclinic-app
    app.openshift.io/runtime-version: latest
  annotations:
    openshift.io/host.generated: 'true'
 
spec:
  host: spring-petclinic-spring-petclinic.apps.cluster-fxwzb.fxwzb.sandbox879.opentlc.com
  to:
    kind: Service
    name: spring-petclinic
    weight: 100
  port:
    targetPort: 8080-tcp
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
  wildcardPolicy: None
